Fixed comment author alignment

--- a/scss/_08-comments.scss
+++ b/scss/_08-comments.scss
@@ -56,6 +56,7 @@
   .comment-author {
     display: inline-grid;
     grid-template-columns: 42px minmax(0, auto);
+    justify-content: start;
     grid-column: 1 / 3;
     grid-row: 1 / 3;
     gap: 1em;
